# mypackage

./: pyproject.toml
.github/workflows/: build.yml
mypackage/: some_class.py
