[tool.poetry]
name = "mypackage"
version = "1.0.0"
description = "n/a"
authors = ["Karlis Fersters <karlis@i-standards.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.289"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
